# resume

./: .buildinfo  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: documentation.yml
_sources/sections/: 3-references.md.txt
resume/: conf.py  index.md
resume/_static/: image.avif
resume/_templates/sidebar/: brand.html
resume/sections/: 1-resume.md  2-portfolio.md  3-references.md
sections/: 1-resume.html  2-portfolio.html  3-references.html
